fixed overlapping issue

--- a/styles.css
+++ b/styles.css
@@ -132,13 +132,13 @@ a{
 }
 
 #image-grid {
-    padding: 0 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
     display: grid;
     height: auto;
     width: 90vw;
-    height: calc(90vw * 9 / 16);
+    height: 0vh;
     gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
 }
 
 #image-grid img {
